--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <!--BootStrap-->
     <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"-->
           <!--integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
 
     <!---->
     <!--Local Libraries-->
@@ -34,7 +35,8 @@
     <script src="vendor/angularjs/angular-route.min.js"></script>
 
     <!--BootStrap-->
-    <link href="vendor/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!--Set up the AngularJS Framework-->
     <script src="app.js"></script>
@@ -48,6 +50,7 @@
     <!--Controllers-->
     <script src="views/home/home.controller.client.js"></script>
 
+    <link href="css/style.css" rel="stylesheet">
     <link href="css/style-home.css" rel="stylesheet">
 
 </head>
