--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,8 @@
 
     <!--Directives-->
     <script src="directives/tr-set-min-height.js"></script>
+    <script src="directives/tr-small-device-navbar.js"></script>
+    <script src="directives/tr-home-header.js"></script>
 
     <!--Controllers-->
     <script src="views/home/home.controller.client.js"></script>
