--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
 
     <!--JQuery-->
     <!--<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>-->
-    <!--<script src="//cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"><script>-->
+    <!--<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"-->
+            <!--integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="-->
+            <!--crossorigin="anonymous"></script>-->
+
 
     <!--AngularJs-->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>-->
@@ -28,7 +31,7 @@
 
     <!--JQuery-->
     <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/jquery/jquery.matchHeight-min.js"></script>
+    <script src="vendor/jquery/jquery-ui.min.js"></script>
 
     <!--AngularJs-->
     <script src="vendor/angularjs/angular.min.js"></script>
@@ -45,7 +48,6 @@
     <!--Services-->
 
     <!--Directives-->
-    <script src="directives/tr-set-min-height.js"></script>
     <script src="directives/tr-small-device-navbar.js"></script>
     <script src="directives/tr-home-header.js"></script>
 
