--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
     <!--Set up the AngularJS Framework-->
     <script src="app.js"></script>
-    <script src="config.js"></script>
+    <script src="route-config.js"></script>
 
     <!--Services-->
 
@@ -53,6 +53,8 @@
 
     <!--Controllers-->
     <script src="views/home/home.controller.client.js"></script>
+    <script src="views/user/user.controller.client.js"></script>
+    <script src="views/course/course.controller.client.js"></script>
 
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style-home.css" rel="stylesheet">
