--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
           rel='stylesheet'>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+    <!---->
+    <!--End-->
+    <!---->
+
     <!--Set up the AngularJS Framework-->
     <script src="app.js"></script>
     <script src="route-config.js"></script>
