--- a/public/index.html
+++ b/public/index.html
@@ -6,23 +6,20 @@
     <title>Trainly.io - CS5200 Fall17 Sec2 Group17</title>
 
     <!---->
-    <!--CDNs-->
+    <!--Local Libraries-->
     <!---->
 
     <!--JQuery-->
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-            integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
-            crossorigin="anonymous"></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/jquery/jquery-ui.min.js"></script>
 
     <!--AngularJs-->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.js"></script>
+    <script src="vendor/angularjs/angular.min.js"></script>
+    <script src="vendor/angularjs/angular-route.min.js"></script>
 
     <!--BootStrap-->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
-          rel='stylesheet'>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!---->
     <!--End-->
@@ -37,6 +34,7 @@
     <!--Directives-->
     <script src="directives/tr-small-device-navbar.js"></script>
     <script src="directives/tr-home-header.js"></script>
+    <script src="directives/tr-underlined-navbar.js"></script>
 
     <!--Controllers-->
     <script src="views/home/home.controller.client.js"></script>
@@ -45,6 +43,7 @@
 
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style-home.css" rel="stylesheet">
+    <link href="css/style-profile.css" rel="stylesheet">
 
 </head>
 <body>
