--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
     <script src="directives/tr-small-device-navbar.js"></script>
     <script src="directives/tr-home-header.js"></script>
     <script src="directives/tr-underlined-navbar.js"></script>
+    <script src="directives/tr-profile-tab.js"></script>
 
     <!--Controllers-->
     <script src="views/home/home.controller.client.js"></script>
