course list items

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
     <!--End-->
     <!---->
 
+    <!--Ng-rate-it-->
+    <link href="css/ng-rate-it/ng-rateit.css" rel="stylesheet">
+    <script src="plugins/ng-rateit.min.js"></script>
+
     <!--Set up the AngularJS Framework-->
     <script src="app.js"></script>
     <script src="route-config.js"></script>
@@ -42,6 +46,7 @@
     <script src="views/user/user.controller.client.js"></script>
     <script src="views/course/course.controller.client.js"></script>
 
+    <!--CSS Stylesheets-->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style-home.css" rel="stylesheet">
     <link href="css/style-profile.css" rel="stylesheet">
