--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style-home.css" rel="stylesheet">
     <link href="css/style-profile.css" rel="stylesheet">
+    <link href="css/style-course.css" rel="stylesheet">
 
 </head>
 <body>
