--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
     <script src="route-config.js"></script>
 
     <!--Services-->
+    <script src="services/user.service.client.js"></script>
 
     <!--Directives-->
     <script src="directives/tr-small-device-navbar.js"></script>
