--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
     <script src="directives/tr-home-header.js"></script>
     <script src="directives/tr-underlined-navbar.js"></script>
     <script src="directives/tr-profile-tab.js"></script>
+    <script src="directives/tr-profile-operation-message.js"></script>
 
     <!--Controllers-->
     <script src="views/home/home.controller.client.js"></script>
