login and register complete except profile picture

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
 
     <!--Services-->
 
+
     <!--Directives-->
     <script src="directives/tr-small-device-navbar.js"></script>
     <script src="directives/tr-home-header.js"></script>
@@ -42,6 +43,10 @@
     <script src="views/home/home.controller.client.js"></script>
     <script src="views/user/user.controller.client.js"></script>
     <script src="views/course/course.controller.client.js"></script>
+    <script src="views/user/login.controller.js"></script>
+    <script src="views/user/register.controller.js"></script>
+
+    <script src="services/user.service.client.js"></script>
 
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style-home.css" rel="stylesheet">
