--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
 
     <!--Services-->
     <script src="services/user.service.client.js"></script>
+    <script src="services/course.service.client.js"></script>
 
     <!--Directives-->
     <script src="directives/tr-small-device-navbar.js"></script>
@@ -42,17 +43,20 @@
     <script src="directives/tr-underlined-navbar.js"></script>
     <script src="directives/tr-profile-tab.js"></script>
     <script src="directives/tr-profile-operation-message.js"></script>
+    <script src="directives/tr-course-material.js"></script>
 
     <!--Controllers-->
     <script src="views/home/home.controller.client.js"></script>
     <script src="views/user/user.controller.client.js"></script>
     <script src="views/course/course.controller.client.js"></script>
+    <script src="views/statistics/statistics.controller.client.js"></script>
 
     <!--CSS Stylesheets-->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style-home.css" rel="stylesheet">
     <link href="css/style-profile.css" rel="stylesheet">
     <link href="css/style-course.css" rel="stylesheet">
+    <link href="css/style-statistics.css" rel="stylesheet">
 
 </head>
 <body>
