added course listing page

--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,12 @@
     <script src="views/course/course.controller.client.js"></script>
     <script src="views/user/login.controller.js"></script>
     <script src="views/user/register.controller.js"></script>
+    <script src="views/courselist/search.controller.js"></script>
+
 
     <script src="services/user.service.client.js"></script>
+    <script src="services/search.service.client.js"></script>
+
 
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style-home.css" rel="stylesheet">
