ready for merging

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
     <script src="directives/tr-profile-tab.js"></script>
     <script src="directives/tr-profile-operation-message.js"></script>
     <script src="directives/tr-course-material.js"></script>
+    <script src="directives/tr-course-completion-message.js"></script>
 
     <!--Controllers-->
     <script src="views/home/home.controller.client.js"></script>
