Upload profile pic working

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
     <!--Directives-->
     <script src="directives/tr-small-device-navbar.js"></script>
     <script src="directives/tr-home-header.js"></script>
+    <script src="directives/tr-file-upload.js"></script>
 
     <!--Controllers-->
     <script src="views/home/home.controller.client.js"></script>
