--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
     <script src="directives/tr-profile-operation-message.js"></script>
     <script src="directives/tr-course-material.js"></script>
     <script src="directives/tr-course-completion-message.js"></script>
+    <script src="directives/tr-full-screen.js"></script>
 
     <!--Controllers-->
     <script src="views/home/home.controller.client.js"></script>
@@ -62,6 +63,7 @@
     <link href="css/style-profile.css" rel="stylesheet">
     <link href="css/style-course.css" rel="stylesheet">
     <link href="css/style-statistics.css" rel="stylesheet">
+    <link href="css/style-user-management.css" rel="stylesheet">
 
 </head>
 <body>
