--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
+    <!--Chart.js-->
+    <script src="vendor/chart.js/Chart.min.js"></script>
+
     <!---->
     <!--End-->
     <!---->
@@ -36,6 +39,7 @@
     <!--Services-->
     <script src="services/user.service.client.js"></script>
     <script src="services/course.service.client.js"></script>
+    <script src="services/report.service.client.js"></script>
 
 
     <!--Directives-->
@@ -47,6 +51,7 @@
     <script src="directives/tr-course-material.js"></script>
     <script src="directives/tr-course-completion-message.js"></script>
     <script src="directives/tr-full-screen.js"></script>
+    <script src="directives/tr-activity-report.js"></script>
 
     <!--Controllers-->
     <script src="views/home/home.controller.client.js"></script>
