--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
     <script src="directives/tr-course-completion-message.js"></script>
     <script src="directives/tr-full-screen.js"></script>
     <script src="directives/tr-activity-report.js"></script>
+    <script src="directives/tr-file-upload.js"></script>
 
     <!--Controllers-->
     <script src="views/home/home.controller.client.js"></script>
