--- a/public/index.html
+++ b/public/index.html
@@ -6,23 +6,26 @@
     <title>Trainly.io - CS5200 Fall17 Sec2 Group17</title>
 
     <!---->
-    <!--Local Libraries-->
+    <!--CDNs-->
     <!---->
 
     <!--JQuery-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/jquery/jquery-ui.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+            integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+            crossorigin="anonymous"></script>
 
     <!--AngularJs-->
-    <script src="vendor/angularjs/angular.min.js"></script>
-    <script src="vendor/angularjs/angular-route.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.js"></script>
 
     <!--BootStrap-->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          rel='stylesheet'>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!--Chart.js-->
-    <script src="vendor/chart.js/Chart.min.js"></script>
+    <script src="plugins/Chart.min.js"></script>
 
     <!---->
     <!--End-->
