janhavi fixed chart cdn link on index page

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!--Chart.js-->
-    <script src="plugins/Chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
 
     <!---->
     <!--End-->
